--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,40 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-font: 'IBM Plex mono';
+  --accent-font: 'IBM Plex mono';
+  /*--------------background-----------------*/
+  --bg-color: #000028;
+  --bg-color-main: #FF0070;
+  --bg-color-decor: #FF0070;
+  --bg-img-header: url(../images/cover-image-dark.png);
+   /*--------------color-----------------*/
+  --header-color: #DB00FF;
+  --title-color: #000028;
+  --header-color-shadow: #ff0070;
+  --main-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --accent-color-decor: #FF0070;
+  --accent-color-rec: #FF0070;
+  --hover-color: rgba(255, 0, 112, 0.40);
+  /*-------------------------------*/
 }
+
+ @media (prefers-color-scheme: dark) {
+  :root {
+    --main-font: 'IBM Plex mono';
+    --accent-font: 'IBM Plex mono';
+    --bg-color: #000028;
+    --bg-color-main: #FF0070;
+    --bg-color-decor: #FF0070;
+    --bg-img-header: url(../images/cover-image-dark.png);
+    --header-color: #DB00FF;
+    --title-color: #000028;
+    --header-color-shadow: #ff0070;
+    --main-color: #F1B2CE;
+    --accent-color: #FF0070;
+    --accent-color-decor: #FF0070;   
+    --accent-color-rec: #FF0070;
+    --hover-color: rgba(255, 0, 112, 0.40);
+    }
+} 
