--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,22 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+   /* ---dark-base--- */
+  --main-font: 'IBM Plex mono';
+  --accent-font: 'IBM Plex mono';
+  /*--------------background-----------------*/
+  --bg-color: #000028;
+  --bg-color-main: #FF0070;
+  --bg-color-decor: #FF0070;
+  --bg-img-header: url(../images/cover-image-dark.png);
+   /*--------------color-----------------*/
+  --header-color: #DB00FF;
+  --title-color: #000028;
+  --header-color-shadow: #ff0070;
+  --main-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --accent-color-decor: #FF0070;
+  --hover-color: rgba(255, 0, 112, 0.40);
+
+}
