--- a/styles/style.css
+++ b/styles/style.css
@@ -204,18 +204,6 @@ button:disabled {
   pointer-events: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 /*--------------------content__section-what---------------*/
 .content__section-what {
   display: grid;
@@ -223,14 +211,57 @@ button:disabled {
   gap: 20px;
 }
 
+/*--------------------content__section-how---------------*/
 
+.content__section-how {
+  display: grid;
+  grid-template-rows: min-content repeat(5, fit-content(471px));
+  gap: 20px;
+}
 
+.content__section-how .main__title-third {
+  margin-block-end: 20px;
+}
 
+.section-how-title {
+  font-weight: 400;
+  margin-block-end: 10px;
+}
 
+/*--------------------content__mountains---------------*/
+.content__section-gallery {
+  display: grid;
+  grid-template-rows: repeat(6, min-content);
+  gap: 10px;
+}
 
+.content__section-gallery .main__title-third {
+  margin-bottom: 0;
+}
 
+.gallery {
+  inline-size: 100%;
+}
 
+.section__gallery-mountains {
+  
+}
 
+.section__gallery-ice-cream {
+
+}
+
+.section__gallery-ice-tape {
+
+}
+
+.section__gallery-books {
+
+}
+
+.section__gallery-street {
+
+}
 
 /*  -------------------------768------------------------ */
 @media (768px <= width < 1024px) {
@@ -275,7 +306,7 @@ button:disabled {
     grid-template-columns: minmax(236px, min-content) 1fr;
   }
 
-  .main__title-second {
+  .content__section-why .main__title-second {
     grid-row-start: 1;
     grid-row-end: 3;
   }
@@ -310,17 +341,110 @@ button:disabled {
     grid-column-start: 1;
     grid-column-end: 3;
   }
+  .content__section-how {
+    grid-template-rows: repeat(5, min-content);
+    grid-template-columns: minmax(236px, min-content) minmax(472px, min-content);
+  }
+
+  .content__section-how .main__title-second {
+    grid-row-start: 1;
+    grid-row-end: 6;
+  }
+
+  .gallery {
+    block-size: 100%;
+  }
+
+  .content__section-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    align-items: start;
+    grid-template-areas:
+    "h3 h3 h3"
+    "mountains mountains ice-cream"
+    "ice-tape books ice-cream"
+    "ice-tape street street"
+    "ice-tape street street"
+    }
+
+    .content__section-gallery .main__title-third {
+      grid-area: h3;
+    }
+
+    .section__gallery-mountains {
+      grid-area: mountains;
+     }
+
+    .section__gallery-ice-cream {
+      object-fit: cover;
+      grid-area: ice-cream;
+     }
+
+    .section__gallery-ice-tape { 
+      grid-area: ice-tape;
+      object-fit: cover;
+     }
+
+    .section__gallery-books { 
+      grid-area: books;
+     }
+
+    .section__gallery-street { 
+      grid-area: street;
+     }
+
+/*
+  .content__section-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: min-content 0.8fr 1.2fr fit-content(318px);
+    gap: 20px;
+    align-items: start;
+    grid-template-areas:
+    "h3 h3 h3"
+    "mountains mountains ice-cream"
+    "ice-tape books ice-cream"
+    "ice-tape street street"
+    "ice-tape street street"
+    }
+
+    .content__section-gallery .main__title-third {
+      grid-area: h3;
+    }
+
+    .section__gallery-mountains {
+      grid-area: mountains;
+     }
+
+    .section__gallery-ice-cream {
+      object-fit: cover;
+      grid-area: ice-cream;
+     }
+
+    .section__gallery-ice-tape { 
+      grid-area: ice-tape;
+      object-fit: cover;
+     }
+
+    .section__gallery-books { 
+      grid-area: books;
+     }
+
+    .section__gallery-street { 
+      grid-area: street;
+     }
+*/
+
 }
-
-
-
 
 
 /*  ----------------------1024--------------------------- */
 @media (width >= 1024px) {
   .header {
     padding: 20px;
-  }
+    max-width: 1024px;
+  } 
 
   .decorated-zone::before {
     right: 20px;
@@ -363,7 +487,7 @@ button:disabled {
 
   .content__section-why {
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: minmax(315px, min-content) 1fr;
+    grid-template-columns: minmax(315px, min-content) minmax(649px, min-content);
   }
 
   .main__title-second {
@@ -373,7 +497,7 @@ button:disabled {
 
   .content__section-what {
     grid-template-rows: min-content 1fr;
-    grid-template-columns: repeat(3, fit-content(315px));;
+    grid-template-columns: repeat(3, fit-content(315px));
   }
 
   .content__section-what .main__title-second {
@@ -404,4 +528,15 @@ button:disabled {
     grid-column-end: 4;
   }
 
+  .content__section-how {
+    grid-template-rows: repeat(5, min-content);
+    grid-template-columns: minmax(315px, min-content) minmax(649px, min-content);
+  }
+
+  .content__section-how .main__title-second {
+    grid-row-start: 1;
+    grid-row-end: 6;
+  }
 }
+
+
