--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,20 +3,17 @@
   и их переопределение под различные устройства
 */
 :root {
-   /* ---dark-base--- */
-  --main-font: 'IBM Plex mono';
-  --accent-font: 'IBM Plex mono';
+  /* ---dark-base--- */
+  --accent-font: "IBM Plex mono";
   /*--------------background-----------------*/
-  --bg-color-main: #FF0070;
-  --bg-color-decor: #FF0070;
+  --bg-color-main: #ff0070;
+  --bg-color-decor: #ff0070;
   --bg-img-header: url(../images/cover-image-dark.png);
-   /*--------------color-----------------*/
-  --header-color: #DB00FF;
+  /*--------------color-----------------*/
+  --header-color: #db00ff;
   --title-color: #000028;
-  --header-color-shadow: #ff0070;
-  --main-color: #F1B2CE;
-  --accent-color: #FF0070;
-  --accent-color-decor: #FF0070;
-  --hover-color: rgba(255, 0, 112, 0.40);
-
+  --main-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --accent-color-rec: #ff0070;
+  --hover-color: rgba(255, 0, 112, 0.4);
 }
