--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,35 +9,40 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-font: "IBM Plex mono";
+  --main-font: 'IBM Plex mono';
+  --accent-font: 'IBM Plex mono';
   /*--------------background-----------------*/
-
-  --bg-color-main: #ff0070;
-  --bg-color-decor: #ff0070;
+           
+  --bg-color-main: #FF0070;
+  --bg-color-decor: #FF0070;
   --bg-img-header: url(../images/cover-image-dark.png);
-  /*--------------color-----------------*/
-  --header-color: #db00ff;
+   /*--------------color-----------------*/
+  --header-color: #DB00FF;
   --title-color: #000028;
-  --main-color: #f1b2ce;
-  --accent-color: #ff0070;
-  --accent-color-rec: #ff0070;
-  --hover-color: rgba(255, 0, 112, 0.4);
+  --header-color-shadow: #ff0070;
+  --main-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --accent-color-decor: #FF0070;
+  --accent-color-rec: #FF0070;
+  --hover-color: rgba(255, 0, 112, 0.40);
   /*-------------------------------*/
 }
 
-@media (prefers-color-scheme: dark) {
+ @media (prefers-color-scheme: dark) {
   :root {
-    --main-font: "IBM Plex mono";
-    --accent-font: "IBM Plex mono";
+    --main-font: 'IBM Plex mono';
+    --accent-font: 'IBM Plex mono';
     --bg-color: #000028;
-    --bg-color-main: #ff0070;
+    --bg-color-main: #FF0070;
+    --bg-color-decor: #FF0070;
     --bg-img-header: url(../images/cover-image-dark.png);
-    --header-color: #db00ff;
+    --header-color: #DB00FF;
     --title-color: #000028;
-    --main-color: #f1b2ce;
-    --accent-color: #ff0070;
-    --accent-color-decor: #ff0070;
-    --accent-color-rec: #ff0070;
-    --hover-color: rgba(255, 0, 112, 0.4);
-  }
-}
+    --header-color-shadow: #ff0070;
+    --main-color: #F1B2CE;
+    --accent-color: #FF0070;
+    --accent-color-decor: #FF0070;   
+    --accent-color-rec: #FF0070;
+    --hover-color: rgba(255, 0, 112, 0.40);
+    }
+} 
