--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@
 
 .header {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 668px;
   padding: 10px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
@@ -31,8 +32,8 @@
   inline-size: 25px;
   right: 10px;
   top: 10px;
-  border-top: 1px solid var(--accent-color-decor, #ff0070);
-  border-right: 1px solid var(--accent-color-decor, #ff0070);
+  border-top: 1px solid var(--accent-color, #ff0070);
+  border-right: 1px solid var(--accent-color, #ff0070);
 }
 
 .decorated-zone::after {
@@ -42,8 +43,8 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-  border-bottom: 1px solid var(--accent-color-decor, #ff0070);
-  border-left: 1px solid var(--accent-color-decor, #ff0070);
+  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-left: 1px solid var(--accent-color, #ff0070);
 }
 
 .rec-text {
@@ -88,7 +89,7 @@
   padding-inline: 13px;
   margin-block-end: 1px;
   font-family: var(--main-font, sans-serif);
-  color: var(--accent-color-decor, #ff0070);
+  color: var(--accent-color, #ff0070);
   font-weight: 400;
   text-transform: lowercase;
 }
@@ -113,7 +114,7 @@ button:disabled {
 
 .header__title {
   color: var(--header-color, #db00ff);
-  text-shadow: 4px 4px 0 var(--header-color-shadow, #ff0070);
+  text-shadow: 4px 4px 0 var(--header-color, #ff0070);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-family: var(--accent-font, sans-serif);
   font-weight: 700;
@@ -129,6 +130,10 @@ button:disabled {
 .header__block-content {
   display: block;
   text-align: left;
+}
+
+.header__block-content span {
+  display: block;
 }
 
 .title-decor {
@@ -183,21 +188,20 @@ button:disabled {
 
 .link__text {
   text-decoration: none;
-  text-shadow: 2px 2px var(--header-color-shadow, #ff0070);
+  text-shadow: 2px 2px var(--header-color, #ff0070);
 }
-
 
 .link__text:focus {
   outline: none;
 }
 
 .link__text:focus-visible {
-    outline: 1px solid var(--main-color, #F1B2CE);
-    outline-offset: 1px;
+  outline: 1px solid var(--main-color, #f1b2ce);
+  outline-offset: 1px;
 }
 
 .link__text:hover {
-  border-block-end: 1px solid var(--main-color, #F1B2CE);
+  border-block-end: 1px solid var(--main-color, #f1b2ce);
 }
 
 .link__text:disabled {
@@ -249,7 +253,8 @@ button:disabled {
 /*-------------------------footer--------------------*/
 .footer {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 668px;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -258,13 +263,12 @@ button:disabled {
 
 .footer__title {
   color: var(--header-color, #db00ff);
-  text-shadow: 2px 2px 0px var(--header-color-shadow, #ff0070);
+  text-shadow: 2px 2px 0px var(--header-color, #ff0070);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-family: var(--accent-font, sans-serif);
   font-weight: 700;
   line-height: 82.5%; /* 129.525px */
 }
-
 
 /*  -------------------------768------------------------ */
 @media (768px <= width < 1024px) {
@@ -369,51 +373,50 @@ button:disabled {
     gap: 20px;
     align-items: start;
     grid-template-areas:
-    "h3 h3 h3"
-    "mountains mountains ice-cream"
-    "ice-tape books ice-cream"
-    "ice-tape street street"
-    "ice-tape street street"
-    }
+      "h3 h3 h3"
+      "mountains mountains ice-cream"
+      "ice-tape books ice-cream"
+      "ice-tape street street"
+      "ice-tape street street";
+  }
 
-    .content__section-gallery .main__title-third {
-      grid-area: h3;
-    }
+  .content__section-gallery .main__title-third {
+    grid-area: h3;
+  }
 
-    .section__gallery-mountains {
-      grid-area: mountains;
-     }
+  .section__gallery-mountains {
+    grid-area: mountains;
+  }
 
-    .section__gallery-ice-cream {
-      object-fit: cover;
-      grid-area: ice-cream;
-     }
+  .section__gallery-ice-cream {
+    object-fit: cover;
+    grid-area: ice-cream;
+  }
 
-    .section__gallery-ice-tape { 
-      grid-area: ice-tape;
-      object-fit: cover;
-     }
+  .section__gallery-ice-tape {
+    grid-area: ice-tape;
+    object-fit: cover;
+  }
 
-    .section__gallery-books { 
-      grid-area: books;
-     }
+  .section__gallery-books {
+    grid-area: books;
+  }
 
-    .section__gallery-street { 
-      grid-area: street;
-     }
+  .section__gallery-street {
+    grid-area: street;
+  }
 
-     .footer {
-      padding: 20px;
-    }
+  .footer {
+    padding: 20px;
+  }
 }
-
 
 /*  ----------------------1024--------------------------- */
 @media (width >= 1024px) {
   .header {
     padding: 20px;
     max-width: 1024px;
-  } 
+  }
 
   .decorated-zone::before {
     right: 20px;
@@ -520,47 +523,44 @@ button:disabled {
     gap: 20px;
     align-items: start;
     grid-template-areas:
-    "h3 h3 h3"
-    "mountains mountains ice-cream"
-    "ice-tape books ice-cream"
-    "ice-tape street street"
-    "ice-tape street street"
-    }
+      "h3 h3 h3"
+      "mountains mountains ice-cream"
+      "ice-tape books ice-cream"
+      "ice-tape street street"
+      "ice-tape street street";
+  }
 
-    .content__section-gallery .main__title-third {
-      grid-area: h3;
-    }
+  .content__section-gallery .main__title-third {
+    grid-area: h3;
+  }
 
-    .section__gallery-mountains {
-      grid-area: mountains;
-     }
+  .section__gallery-mountains {
+    grid-area: mountains;
+  }
 
-    .section__gallery-ice-cream {
-      object-fit: cover;
-      grid-area: ice-cream;
-     }
+  .section__gallery-ice-cream {
+    object-fit: cover;
+    grid-area: ice-cream;
+  }
 
-    .section__gallery-ice-tape { 
-      grid-area: ice-tape;
-      object-fit: cover;
-     }
+  .section__gallery-ice-tape {
+    grid-area: ice-tape;
+    object-fit: cover;
+  }
 
-    .section__gallery-books { 
-      grid-area: books;
-     }
+  .section__gallery-books {
+    grid-area: books;
+  }
 
-    .section__gallery-street { 
-      grid-area: street;
-     }
+  .section__gallery-street {
+    grid-area: street;
+  }
 
-     .footer {
-      padding: 20px;
-    }
+  .footer {
+    padding: 20px;
+  }
 
-    .footer__title {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    }
-  
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
-
-
