--- a/styles/light.css
+++ b/styles/light.css
@@ -9,11 +9,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-font: "IBM Plex mono";
+  --main-font: 'IBM Plex mono';
   --bg-color-main: #ff8dcb;
   --bg-color-decor: transparent;
   --bg-img-header: url(../images/cover-image-light.png);
   --header-color: #ffc2e6;
+  --color-shadow: #FF8DCB;
   --title-color: #353430;
   --main-color: #353430;
   --accent-color: #353430;
@@ -23,11 +24,12 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --accent-font: "IBM Plex mono";
+    --main-font: 'IBM Plex mono';
     --bg-color-main: #ff8dcb;
     --bg-color-decor: transparent;
     --bg-img-header: url(../images/cover-image-light.png);
     --header-color: #ffc2e6;
+    --color-shadow: #FF8DCB;
     --title-color: #353430;
     --main-color: #353430;
     --accent-color: #353430;
